<resources>
    <string name="app_name">日迹</string>
    <string name="app_introduction">每一个独立而丰富的灵魂，都有处可栖</string>
    <string name="title">日记</string>
    <string name="welcome">欢迎</string>
    <string name="add">新建</string>
    <string name="back">返回</string>
    <string name="search">搜索</string>
    <string name="list">列表</string>
    <string name="calendar">日历</string>
    <string name="setting">设置</string>
    <string name="help">帮助</string>
    <string name="search_hint">请输入关键字</string>
    <string name="feedback">意见反馈</string>
    <string name="share">分享</string>
    <string name="about">关于</string>
    <string name="exit">退出程序</string>
    <string name="account_setting">帐号管理</string>
    <string name="login">登录</string>
    <string name="logout">退出登录</string>
    <string name="register">注册</string>
    <string name="user">邮箱</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="reset_password">重置密码</string>
    <string name="verification">验证</string>
    <string name="confirm_password">确认密码</string>
    <string name="activity_edit_hint">内容</string>
    <string name="activity_feedback_menu_send">提交</string>
    <string name="top">选择置顶</string>
    <string name="no_top">取消置顶</string>
    <string name="clear">clear</string>


    <!-- Gesture login activity -->
    <string name="gesture_forget_gesture">忘记手势密码</string>
    <string name="gesture_default">请输入手势密码</string>
    <string name="gesture_error">手势密码输入错误</string>
    <string name="gesture_correct">输入正确</string>

    <!-- Create gesture activity -->
    <string name="create_gesture_activity">CreateGestureActivity</string>
    <string name="create_gesture_default">绘制解锁图案</string>
    <string name="create_gesture_correct">再次绘制解锁图案</string>
    <string name="create_gesture_less_error">至少连接4个点，请重新输入</string>
    <string name="create_gesture_confirm_error">与上一次绘制不一致，请重新绘制</string>
    <string name="create_gesture_confirm_correct">设置成功</string>
    <string name="create_gesture_reset">重新设置</string>
</resources>
