<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lly_nav"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_weather"
                android:layout_width="match_parent"
                android:layout_height="176dp"
                android:background="?attr/colorPrimaryDark"
                android:gravity="bottom"
                android:orientation="vertical"
                android:padding="16dp"
                android:visibility="visible" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                    <ImageView
                        android:id="@+id/iv_weather_icon"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:contentDescription="@null"
                        android:src="@mipmap/ic_launcher" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_welcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="5dp"
                    android:text="@string/welcome"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="5dp"
                    android:text="login"
                    android:textColor="@color/white"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lly_setting"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="6dp"
                android:background="@drawable/nav_item_selector"
                android:clickable="true">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_settings"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/setting"
                    android:layout_marginStart="24dp"
                    android:gravity="center_vertical"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lly_feedback"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="6dp"
                android:background="@color/white">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_send"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/feedback"
                    android:layout_marginStart="24dp"
                    android:gravity="center_vertical"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lly_share"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="6dp"
                android:background="@color/white">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="10dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_share"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/share"
                    android:layout_marginStart="24dp"
                    android:gravity="center_vertical"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lly_about"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="6dp"
                android:background="@color/white">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_about"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/about"
                    android:layout_marginStart="24dp"
                    android:gravity="center_vertical"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lly_logout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="6dp"
                android:background="@color/white">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_person"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/logout"
                    android:layout_marginStart="24dp"
                    android:gravity="center_vertical"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lly_exit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="12dp"
                android:background="@color/white">
                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginStart="8dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/ic_exit_app"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="24dp"
                    android:gravity="center_vertical"
                    android:text="@string/exit"
                    android:textColor="@color/colorAccent" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
